--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,143 +1,147 @@
-body {
-  margin: 0;
-  font-family: "Helvetica", sans-serif;
+* {
+  font-family: Helvetica;
+  font-size: 22px;
   color: seashell;
   background-color: black;
-  font-size: 22px;
+  opacity: 0.9;
   text-align: center;
-}
-
-a {
-  color: seashell;
-}
-
-h2,
-h3,
-h4 {
   margin: 0;
-  padding: 10px;
 }
 
-.flex-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+h2 {
+  font-size: 32px;
+  padding-bottom: 20px;
 }
 
-/* Header Section */
+h3 {
+  font-size: 27px;
+}
 
 header {
+  display: flex;
   width: 100%;
-  position: fixed;
-  z-index: 1;
   height: 69px;
-  background-color: black;
   border-bottom: 1px solid seashell;
+  padding: 0 10px;
+  position: fixed;
+  z-index: 10;
   align-items: center;
+  justify-content: space-between;
 }
 
-header img {
+.logo-header {
+  display: flex;
+}
+
+#logo {
   height: 50px;
-  padding-left: 10px;
 }
 
 nav {
-  text-align: right;
-  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: 15px;
 }
 
-nav span {
+nav li {
   display: inline-block;
-  padding: 20px 10px;
+  text-decoration: underline;
+  padding-left: 10px;
 }
 
-/* Main Section */
-
-.main {
-  padding-top: 69px;
-  opacity: 0.9;
-  width: 1200px;
-  margin: auto;
-}
-
-/* Mission Section */
-
-#mission {
-  height: 700px;
-  background-image: url("../images/top-background.jpeg");
-  padding-top: 70px;
-}
-
-#mission .content {
-  margin: auto;
-  background-color: black;
-  width: 100%;
-}
-
-/* Store Section */
-
-#store {
-  height: 700px;
-  width: 1000px;
-  margin: auto;
-  padding-top: 70px;
-}
-
-.item {
-  padding: 5px;
-}
-
-.item img {
-  height: 200px;
-  margin: 10px;
-  display: block;
-}
-
-.item span {
-  display: block;
-  padding: 5px;
-  font-weight: bold;
-  text-align: center;
-}
-
-/* Location Section */
-
-.flex-container.locations {
-  padding-top: 5px;
-}
-
-#locations {
-  background-image: url("../images/locations-background.jpeg");
-  height: 500px;
-  padding-top: 70px;
-}
-
-#locations .flex-container {
-  margin: auto;
-  width: 1100px;
-}
-
-.location {
-  opacity: 1.0;
-  padding: 10px;
-  margin: 5px 20px;
-  background-color: black;
-  flex-basis: 280px;
+.content {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#mission {
+  width: 1200px;
+  height: 700px;
+  background-image: url("../images/top-background.jpeg");
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-top: 70px;
+}
+
+.our-mission {
+  padding: 10px 0;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+}
+
+#tea {
+  margin-top: 70px;
+  width: 1060px;
+}
+
+.img-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
 }
 
-/* Contact Section */
+.block {
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
 
-#contact {
+.image {
+  width: 300px;
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+#locations {
+  width: 1200px;
+  max-height: 500px;
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  background-image: url("../images/locations-background.jpeg");
+  background-position: center;
+  background-size: cover;
+  flex-wrap: wrap;
+  padding-bottom: 100px;
+  padding-top: 53px;
+}
+
+.location {
+  width: 300px;
+  height: 300px;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 20px;
+}
+
+#locations_title {
+  min-width: 1200px;
+  background: none;
+  padding: 0;
+  margin-bottom: 15px;
+  line-height: 32px;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   height: 200px;
 }
 
-/* Footer Section */
-
-footer {
+.copyright {
+  margin: 35px 20px;
   text-align: left;
-  padding-left: 20px;
 }
 
